Added Transaction APIs
