# routes/appRoutes.js
@@ -1,6 +1,9 @@
 const router = require("express").Router();
 
-const { sendMoney, requestMoney } = require("../controllers/transaction.controller");
+const {
+  sendMoney,
+  requestMoney,
+} = require("../controllers/transaction.controller");
 const {
   register,
   login,
@@ -19,8 +22,7 @@ router
   .get(verifyToken, getUserData)
   .put(verifyToken, updateUser);
 
-
 router.post("/send-money", verifyToken, sendMoney);
-router.post("/request-money", verifyToken, requestMoney);
+// router.post("/request-money", verifyToken, requestMoney);
 
 module.exports = router;
